SOLR-14095: Fix Java 8 compile issue